Pequeñas mejoras en Login e implementación de formulario de Registro.

--- a/src/app/pages/reset-password/reset-password.component.html
+++ b/src/app/pages/reset-password/reset-password.component.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Recuperar contrasena</ion-title>
+    <ion-title>Recupera tu contraseña</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -22,11 +22,11 @@
       </ion-input>
     </ion-item>
     <ion-note color="danger" *ngIf="emailInput.invalid && emailInput.touched">
-      Por favor, ingrese un correo electrónico válido.
+      Correo electrónico inexistente.
     </ion-note>
 
     <ion-button expand="block" type="submit" [disabled]="resetPasswordForm.invalid">
-      Enviar Enlace
+      Recuperar
     </ion-button>
   </form>
 </ion-content>
