--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -10,7 +10,7 @@
 <ion-content class="ion-padding">
   <form (ngSubmit)="onLogin()" #loginForm="ngForm">
     <ion-item>
-      <ion-label position="floating">Nombre de usuario</ion-label>
+      <ion-label position="floating">Usuario</ion-label>
       <ion-input 
         type="text" 
         [(ngModel)]="username" 
@@ -20,7 +20,7 @@
       </ion-input>
     </ion-item>
     <ion-note color="danger" *ngIf="usernameInput.invalid && usernameInput.touched">
-      Usuario es requerido
+      El nombre de usuario es obligatorio.
     </ion-note>
 
     <ion-item>
@@ -34,7 +34,7 @@
       </ion-input>
     </ion-item>
     <ion-note color="danger" *ngIf="passwordInput.invalid && passwordInput.touched">
-      Contraseña es requerida
+      La contraseña es obligatoria.
     </ion-note>
 
     <ion-button expand="block" type="submit" [disabled]="loginForm.invalid">
@@ -42,6 +42,9 @@
     </ion-button>
     <ion-button expand="block" color="light" (click)="onResetPassword()">
       ¿Olvidaste tu contraseña?
+    </ion-button>
+    <ion-button expand="block" color="dark" (click)="goToRegister()">
+      Registrarme
     </ion-button>
     
   </form>
