--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,6 +8,7 @@
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-padding">
+    <p>Bienvenido a Nitsuga!</p>
     <ion-button id="open-modal" expand="block">Nosotros</ion-button>
     <ion-modal #modal trigger="open-modal" [canDismiss]="canDismiss" [presentingElement]="page">
       <ng-template>
@@ -20,15 +21,18 @@
           </ion-toolbar>
         </ion-header>
         <ion-content class="ion-padding">
-          <h2>Compras</h2><br>
+          <h2>Compras  <ion-icon name="bag-handle"></ion-icon></h2><br>
           <p>Ofrecemos una amplia gama de productos y servicios para satisfacer las necesidades de nuestros clientes.</p><br>
-          <h2>Comunicacion</h2><br>
+          <h2>Comunicacion  <ion-icon name="chatbubbles"></ion-icon></h2><br>
           <p>Contamos con formularios de comunicación online y también otros canales de soporte para mejorar la experiencia del cliente.</p><br>
-          <h2>Seguridad</h2><br>
+          <h2>Seguridad  <ion-icon name="lock-closed"></ion-icon></h2><br>
           <p>Tus compras y datos personales siempre estarán protegidos por un sistema de seguridad seguro y confiable.</p>
 
         </ion-content>
       </ng-template>
     </ion-modal>
+    <div class="button-container">
+      <a mat-stroked-button href="https://www.google.com/" target="_blank">Categorias</a>
+    </div>
   </ion-content>
 </div>
