--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -10,3 +10,18 @@
 .button-container a {
     width: 100%;
   }
+
+  ion-card {
+    color: white;
+    opacity: 0.5;
+    background: blue;
+    margin: 10px;
+  
+    --background: red;
+  }
+  
+  @media (prefers-color-scheme: dark) {
+    ion-card {
+      --background: green;
+    }
+  }
