Cambios en componente Register, implementando validacion de campos con jQuery

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,7 +9,7 @@
   </ion-header>
   <ion-content class="ion-padding">
     <ion-card #card>
-      <ion-card-content>Bievenido a Nitsuga!</ion-card-content>
+      <ion-card-content>Bienvenido a Nitsuga!</ion-card-content>
     </ion-card>
     <ion-button id="open-modal" expand="block">Nosotros</ion-button>
     <ion-modal #modal trigger="open-modal" [canDismiss]="canDismiss" [presentingElement]="page">
@@ -33,7 +33,8 @@
       </ng-template>
     </ion-modal>
     <div class="button-container">
-      <a mat-stroked-button href="https://www.google.com/" target="_blank">Categorias</a>
+      <a mat-stroked-button href="/folder/categorias">Categorias</a>
     </div>
+    
   </ion-content>
 </div>
