--- a/src/app/categorias/categorias.page.html
+++ b/src/app/categorias/categorias.page.html
@@ -1,6 +1,9 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Categorias</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Categorías</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -10,4 +13,7 @@
       <ion-title size="large">Categorias</ion-title>
     </ion-toolbar>
   </ion-header>
+
+
+
 </ion-content>
