Pagina categoría con cards e imagenes

--- a/src/app/categorias/categorias.page.html
+++ b/src/app/categorias/categorias.page.html
@@ -14,6 +14,72 @@
     </ion-toolbar>
   </ion-header>
 
+  <ion-card>
+    <img alt="Artículos escolares" class="card-image" src="../assets/img/img_categorias/art _escolares.JPEG" />
+    <ion-card-header>
+      <ion-card-title>Artículos Escolares</ion-card-title>
+    </ion-card-header>
+  
+    <ion-card-content>
+      Here's a small text description for the card content. Nothing more, nothing less.
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <img alt="Artículos escolares" class="card-image" src="../assets/img/img_categorias/art_varios.JPEG" />
+    <ion-card-header>
+      <ion-card-title>Artículos Varios</ion-card-title>
+    </ion-card-header>
+  
+    <ion-card-content>
+      Here's a small text description for the card content. Nothing more, nothing less.
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <img alt="Artículos escolares" class="card-image" src="../assets/img/img_categorias/bolsos_mochilas.jpg" />
+    <ion-card-header>
+      <ion-card-title>Bolsos y mochilas</ion-card-title>
+    </ion-card-header>
+  
+    <ion-card-content>
+      Here's a small text description for the card content. Nothing more, nothing less.
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <img alt="Artículos escolares" class="card-image" src="../assets/img/img_categorias/libretas_cuadernoss.jpg" />
+    <ion-card-header>
+      <ion-card-title>Libretas y cuadernos</ion-card-title>
+    </ion-card-header>
+  
+    <ion-card-content>
+      Here's a small text description for the card content. Nothing more, nothing less.
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <img alt="Artículos escolares" class="card-image" src="../assets/img/img_categorias/minilamparas.JPEG" />
+    <ion-card-header>
+      <ion-card-title>Lámparas</ion-card-title>
+    </ion-card-header>
+  
+    <ion-card-content>
+      Here's a small text description for the card content. Nothing more, nothing less.
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <img alt="Artículos escolares" class="card-image" src="../assets/img/img_categorias/peluches.JPEG" />
+    <ion-card-header>
+      <ion-card-title>Peluches</ion-card-title>
+    </ion-card-header>
+  
+    <ion-card-content>
+      Here's a small text description for the card content. Nothing more, nothing less.
+    </ion-card-content>
+  </ion-card>
+
   
 
 
