--- a/src/app/categorias/categorias.page.html
+++ b/src/app/categorias/categorias.page.html
@@ -25,7 +25,7 @@
     </ion-card-header>
   
     <ion-card-content>
-      Here's a small text description for the card content. Nothing more, nothing less.
+      HOLAAAAAAAAAAAAAAAAAAAAA
     </ion-card-content>
   </ion-card>
 
