--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,19 +1,19 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Login</ion-title>
+    <ion-title>Iniciar Sesión</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
   <!-- Campo para el nombre de usuario -->
   <ion-item>
-    <ion-label position="floating">Username</ion-label>
+    <ion-label position="floating">Nombre de Usuario</ion-label>
     <ion-input type="text" [(ngModel)]="username"></ion-input>
   </ion-item>
 
   <!-- Campo para la contraseña -->
   <ion-item>
-    <ion-label position="floating">Password</ion-label>
+    <ion-label position="floating">Contraseña</ion-label>
     <ion-input type="password" [(ngModel)]="password"></ion-input>
   </ion-item>
 
@@ -21,15 +21,15 @@
   <ion-text color="danger" *ngIf="errorMessage">Credenciales inválidas</ion-text>
 
   <!-- Botón para iniciar sesión -->
-  <ion-button expand="block" (click)="login()">Login</ion-button>
+  <ion-button expand="block" (click)="login()">Iniciar Sesión</ion-button>
 
   <!-- Link opcional para navegar a la página de registro -->
   <ion-item lines="none">
-    <ion-label>Don't have an account?</ion-label>
-    <ion-button fill="clear" routerLink="/register">Register</ion-button>
+    <ion-label>¿No tienes una cuenta?</ion-label>
+    <ion-button fill="clear" routerLink="/register">¡Registrate!</ion-button>
   </ion-item>
   <ion-item lines="none">
-    <ion-label>Recuperar contraseña?</ion-label>
-    <ion-button fill="clear" routerLink="/reset-password">Reset Password</ion-button>
+    <ion-label>¿Olvidaste tu contraseña?</ion-label>
+    <ion-button fill="clear" routerLink="/reset-password">¡Recuperala!</ion-button>
   </ion-item>
 </ion-content>
