--- a/src/app/login/register/register.component.html
+++ b/src/app/login/register/register.component.html
@@ -7,19 +7,20 @@
 <ion-content class="ion-padding">
   <!-- Campo para el nombre de usuario -->
   <ion-item>
-    <ion-label position="floating">Username</ion-label>
+    <ion-label position="floating">Nombre de Usuario</ion-label>
     <ion-input type="text" [(ngModel)]="username"></ion-input>
   </ion-item>
 
-  <!-- Campo para la contraseña -->
+
+  <!-- Contraseña -->
   <ion-item>
-    <ion-label position="floating">Password</ion-label>
+    <ion-label position="floating">Contraseña</ion-label>
     <ion-input type="password" [(ngModel)]="password"></ion-input>
   </ion-item>
 
   <!-- Confirmación de la contraseña -->
   <ion-item>
-    <ion-label position="floating">Confirm Password</ion-label>
+    <ion-label position="floating">Repite la contraseña</ion-label>
     <ion-input type="password" [(ngModel)]="confirmPassword"></ion-input>
   </ion-item>
 
@@ -27,5 +28,5 @@
   <ion-text color="danger" *ngIf="errorMessage">{{ errorMessage }}</ion-text>
 
   <!-- Botón para registrar -->
-  <ion-button expand="block" (click)="register()">Register</ion-button>
+  <ion-button expand="block" (click)="register()">Registrarme</ion-button>
 </ion-content>
