--- a/src/app/categorias/categorias.page.html
+++ b/src/app/categorias/categorias.page.html
@@ -3,7 +3,7 @@
     <div style="display: flex; background-color: rgb(114, 114, 114);">
       <img src="../assets/img/Logo/logonitsuga.png" alt="Logo" style="height: 50px; margin-right: 10px; margin-left: 5px;" [routerLink]="['/home']"
         (click)="showLoading()">
-      <ion-title style="color:white;">Inicio</ion-title>
+      <ion-title style="color:white;">Categorías</ion-title>
       <ion-buttons slot="end">
         <ion-menu-button style="color:white;"></ion-menu-button>
       </ion-buttons>
@@ -25,7 +25,7 @@
     </ion-card-header>
   
     <ion-card-content>
-      HOLAAAAAAAAAAAAAAAAAAAAAAA
+      Artículos esenciales para estudiantes de todas las edades.
     </ion-card-content>
   </ion-card>
 
@@ -36,7 +36,7 @@
     </ion-card-header>
   
     <ion-card-content>
-      Here's a small text description for the card content. Nothing more, nothing less.
+      Descubre mochilas y bolsos para cada estilo y necesidad. Perfectos para la escuela, actividades extracurriculares y más.
     </ion-card-content>
   </ion-card>
 
@@ -47,7 +47,7 @@
     </ion-card-header>
   
     <ion-card-content>
-      Here's a small text description for the card content. Nothing more, nothing less.
+      Encuentra la libreta o cuaderno perfecto para tus clases. Diseños variados para todos los gustos.
     </ion-card-content>
   </ion-card>
 
@@ -58,7 +58,7 @@
     </ion-card-header>
   
     <ion-card-content>
-      Here's a small text description for the card content. Nothing more, nothing less.
+      Ilumina tu espacio de estudio con nuestras lámparas. Diseños funcionales y decorativos.
     </ion-card-content>
   </ion-card>
 
@@ -69,7 +69,7 @@
     </ion-card-header>
   
     <ion-card-content>
-      Here's a small text description for the card content. Nothing more, nothing less.
+      Descubre nuestra colección de peluches suaves y adorables. ¡El regalo perfecto para cualquier ocasión!
     </ion-card-content>
   </ion-card>
 
@@ -80,7 +80,7 @@
     </ion-card-header>
   
     <ion-card-content>
-      Here's a small text description for the card content. Nothing more, nothing less.
+      Explora artículos únicos y divertidos que no encontrarás en ningún otro lugar. ¡Siempre hay algo nuevo!
     </ion-card-content>
   </ion-card>
 
