--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,15 +13,101 @@
 
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <div style="display:flex;">
-        <img src="../assets/img/Logo/logonitsuga.png" alt="logo" style="height: 50px; margin-right: 10px;" [routerLink]="['/home']" (click)="showLoading()">
-        <ion-buttons slot="end">
-          <ion-menu-button></ion-menu-button>
-        </ion-buttons>
-      </div>
-    </ion-toolbar>
-  </ion-header>
+  <ion-title style="font-size:30px; align-items: center; color: red; margin-top: 8px;">HOT SALES</ion-title>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6" size-md="4" size-lg="2">
+        <ion-card>
+          <img alt="Silhouette of mountains" src="../assets/img/peluches/peluche_panda.png" />
+          <ion-card-header>
+            <ion-card-title>Peluche Oso Panda</ion-card-title>
+            <ion-card-subtitle>$4.990</ion-card-subtitle>
+          </ion-card-header>
+          <ion-item>
+            <ion-icon slot="start" name="cart-outline"></ion-icon>
+            <ion-button fill="clear">Agregar al carrito</ion-button>
+          </ion-item>
+        </ion-card>
+      </ion-col>
+      <ion-col size="6" size-md="4" size-lg="2">
+        <ion-card>
+          <img alt="Silhouette of mountains" src="../assets/img/libretas_cuadernos/libreta_cute1.jpg" />
+          <ion-card-header>
+            <ion-card-title>Variedad Libretas Kawaii</ion-card-title>
+            <ion-card-subtitle>$2.990</ion-card-subtitle>
+          </ion-card-header>
+          <ion-item>
+            <ion-icon slot="start" name="cart-outline"></ion-icon>
+            <ion-button fill="clear">Agregar al carrito</ion-button>
+          </ion-item>
+        </ion-card>
+      </ion-col>
+      <ion-col size="6" size-md="4" size-lg="2">
+        <ion-card>
+          <img alt="Silhouette of mountains" src="../assets/img/lamparas/lampara_charmander.JPEG" />
+          <ion-card-header>
+            <ion-card-title>Lámpara Charmander</ion-card-title>
+            <ion-card-subtitle>$2.990</ion-card-subtitle>
+          </ion-card-header>
+          <ion-item>
+            <ion-icon slot="start" name="cart-outline"></ion-icon>
+            <ion-button fill="clear">Agregar al carrito</ion-button>
+          </ion-item>
+        </ion-card>
+      </ion-col>
+      <ion-col size="6" size-md="4" size-lg="2">
+        <ion-card>
+          <img alt="Silhouette of mountains" src="../assets/img/lamparas/lampara_squartle.JPEG" />
+          <ion-card-header>
+            <ion-card-title>Lámpara Squirtle</ion-card-title>
+            <ion-card-subtitle>$2.990</ion-card-subtitle>
+          </ion-card-header>
+          <ion-item>
+            <ion-icon slot="start" name="cart-outline"></ion-icon>
+            <ion-button fill="clear">Agregar al carrito</ion-button>
+          </ion-item>
+        </ion-card>
+      </ion-col>
+      <ion-col size="6" size-md="4" size-lg="2">
+        <ion-card>
+          <img alt="Silhouette of mountains" src="../assets/img/art_varios/pantuflas.png" />
+          <ion-card-header>
+            <ion-card-title>Pantuflas Conejo</ion-card-title>
+            <ion-card-subtitle>$3.990</ion-card-subtitle>
+          </ion-card-header>
+          <ion-item>
+            <ion-icon slot="start" name="cart-outline"></ion-icon>
+            <ion-button fill="clear">Agregar al carrito</ion-button>
+          </ion-item>
+        </ion-card>
+      </ion-col>
+      <ion-col size="6" size-md="4" size-lg="2">
+        <ion-card>
+          <img alt="Silhouette of mountains" src="../assets/img/bolsos_mochilas/bolso_gatito2.JPEG" />
+          <ion-card-header>
+            <ion-card-title>Bolso Gatito</ion-card-title>
+            <ion-card-subtitle>$2.990</ion-card-subtitle>
+          </ion-card-header>
+          <ion-item>
+            <ion-icon slot="start" name="cart-outline"></ion-icon>
+            <ion-button fill="clear">Agregar al carrito</ion-button>
+          </ion-item>
+        </ion-card>
+      </ion-col>
+      <ion-col size="6" size-md="4" size-lg="2">
+        <ion-card>
+          <img alt="Silhouette of mountains" src="../assets/img/art_varios/calentador_manos.png" />
+          <ion-card-header>
+            <ion-card-title>Calentador de Manos</ion-card-title>
+            <ion-card-subtitle>$4.990</ion-card-subtitle>
+          </ion-card-header>
+          <ion-item>
+            <ion-icon slot="start" name="cart-outline"></ion-icon>
+            <ion-button fill="clear">Agregar al carrito</ion-button>
+          </ion-item>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
 
