--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,35 +1,50 @@
 <ion-app>
   <ion-menu-toggle>
     <ion-menu side="end" contentId="main-content">
-    <ion-header>
-      <ion-toolbar>
-        <ion-title>Menú</ion-title>
-      </ion-toolbar>
-    </ion-header>
-    <ion-content class="ion-padding">
-      <ion-list>
-        <ion-item routerLink="/home" (click)="closeMenu()" (click)="showLoading()">
-          <ion-icon slot="start" name="home-outline"></ion-icon>
-          <ion-label>Home</ion-label>
-        </ion-item>
-        <ion-item routerLink="/categorias" (click)="closeMenu()" (click)="showLoading()">
-          <ion-icon slot="start" name="library-outline"></ion-icon>
-          <ion-label>Categorias</ion-label>
-        </ion-item>
-        <ion-item routerLink="/contacto" (click)="closeMenu()" (click)="showLoading()">
-          <ion-icon slot="start" name="call"></ion-icon>
-          <ion-label>Contacto</ion-label>
-        </ion-item>
-        <ion-item routerLink="/contacto" (click)="closeMenu()" (click)="showLoading()">
-          <ion-icon slot="start" name="call"></ion-icon>
-          <ion-label>Contacto</ion-label>
-        </ion-item>
-        <!-- Agrega más ítems según tus necesidades -->
-      </ion-list>
-    </ion-content>
-  </ion-menu>
+      <ion-header>
+        <ion-toolbar>
+          <ion-title>Menú</ion-title>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content class="ion-padding">
+        <ion-list>
+          <ion-item routerLink="/home" (click)="closeMenu()" (click)="showLoading()">
+            <ion-icon slot="start" name="home-outline"></ion-icon>
+            <ion-label>Home</ion-label>
+          </ion-item>
+          <ion-item routerLink="/categorias" (click)="closeMenu()" (click)="showLoading()">
+            <ion-icon slot="start" name="library-outline"></ion-icon>
+            <ion-label>Categorias</ion-label>
+          </ion-item>
+          <!--
+          <ion-accordion-group>
+            <ion-accordion>
+              <ion-item slot="header">
+                <ion-icon slot="start" name="library-outline"></ion-icon>
+                <ion-label>Categorías</ion-label>
+              </ion-item>
+              <div class="ion-padding" slot="content">Artículos Escolares</div>
+              <div class="ion-padding" slot="content">Bolos y Mochilas</div>
+              <div class="ion-padding" slot="content">Lámparas</div>
+              <div class="ion-padding" slot="content">Libretas y Cuadernos</div>
+              <div class="ion-padding" slot="content">Zona Random</div>
+            </ion-accordion>
+          </ion-accordion-group>
+          -->
+          <ion-item routerLink="/contacto" (click)="closeMenu()" (click)="showLoading()">
+            <ion-icon slot="start" name="call"></ion-icon>
+            <ion-label>Contacto</ion-label>
+          </ion-item>
+          <ion-item routerLink="/contacto" (click)="closeMenu()" (click)="showLoading()">
+            <ion-icon slot="start" name="call"></ion-icon>
+            <ion-label>Contacto</ion-label>
+          </ion-item>
+          <!-- Agrega más ítems según tus necesidades -->
+        </ion-list>
+      </ion-content>
+    </ion-menu>
   </ion-menu-toggle>
-  
+
   <!--
    <div class="ion-page" id="main-content">
     <ion-header>
@@ -47,7 +62,7 @@
   </div>
   -->
 
- 
+
   <ion-router-outlet id="main-content"></ion-router-outlet>
 </ion-app>
 
