--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Inicio</ion-title>
+    <div style="display: flex; background-color: rgb(114, 114, 114);">
+      <img src="../assets/img/Logo/logonitsuga.png" alt="Logo" style="height: 50px; margin-right: 10px; margin-left: 5px;" [routerLink]="['/home']"
+        (click)="showLoading()">
+      <ion-title style="color:white;">Inicio</ion-title>
+      <ion-buttons slot="end">
+        <ion-menu-button style="color:white;"></ion-menu-button>
+      </ion-buttons>
+    </div>
   </ion-toolbar>
 </ion-header>
 
