Actualizacion global scss y login

--- a/src/app/categorias/categorias.page.html
+++ b/src/app/categorias/categorias.page.html
@@ -1,11 +1,11 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <div style="display: flex; background-color: rgb(114, 114, 114);">
+    <div style="display: flex;">
       <img src="../assets/img/Logo/logonitsuga.png" alt="Logo" style="height: 50px; margin-right: 10px; margin-left: 5px;" [routerLink]="['/home']"
         (click)="showLoading()">
-      <ion-title style="color:white;">Categorías</ion-title>
+      <ion-title>Categorías</ion-title>
       <ion-buttons slot="end">
-        <ion-menu-button style="color:white;"></ion-menu-button>
+        <ion-menu-button></ion-menu-button>
       </ion-buttons>
     </div>
   </ion-toolbar>
