--- a/src/global.scss
+++ b/src/global.scss
@@ -35,3 +35,16 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import "@ionic/angular/css/palettes/dark.system.css";
+
+
+ion-content{
+    --background:rgb(99, 61, 104);
+}
+
+ion-toolbar {
+    --background: #2d1230; /* Cambia el color de la toolbar */
+  }
+
+ion-title, ion-menu-button {
+    color: white; 
+}
