--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -7,7 +7,7 @@
 <ion-content class="ion-padding centered-page">
   <!-- Campo para el nombre de usuario -->
 
-  <ion-card class="centered-content">
+  <ion-card class="animated-border-card centered-content">
     <img src="../assets/img/Logo/logonitsuga.png" alt="Logo" class="logo-img">
     <ion-card-header>
       <ion-card-title class="ion-text-center"> Accede a tu cuenta</ion-card-title>
