--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -4,13 +4,14 @@
     align-items: center;
     height: 100vh;
 }
-.logo-img{
+
+.logo-img {
     display: block;
     margin: 0 auto;
     width: 50%;
     height: 50%;
     margin-bottom: 20px;
-    
+
 }
 
 ion-card-content {
@@ -39,3 +40,46 @@ ion-item {
 ion-button {
     margin-top: 20px;
 }
+
+.animated-border-card {
+    position: relative;
+    padding: 20px; /* Espaciado interno de la tarjeta */
+    background-color: white; /* Fondo de la tarjeta */
+    border-radius: 20px; /* Bordes redondeados */
+    z-index: 1;
+    
+    &:before {
+      content: '';
+      position: absolute;
+      top: 0; /* Alinea el borde con la parte superior */
+      left: 0; /* Alinea el borde con la parte izquierda */
+      right: 0; /* Alinea el borde con la parte derecha */
+      bottom: 0; /* Alinea el borde con la parte inferior */
+      border-radius: 20px; /* Bordes redondeados del borde */
+      border: 4px solid transparent; /* El borde es inicialmente transparente */
+      background-clip: padding-box; /* Evita que el gradiente cubra el contenido */
+      z-index: -1; /* Mantiene el borde detrás del contenido */
+      animation: rotateBorder 5s linear infinite; /* Animación continua */
+      transition: border-color 0.5s; /* Transición suave para el color del borde */
+    }
+  }
+  
+  /* Animación que hace que el borde cambie de color */
+  @keyframes rotateBorder {
+    0% {
+      border-color: #df3fff; /* Color inicial */
+    }
+    25% {
+      border-color: #ff00c8; /* Segundo color */
+    }
+    50% {
+      border-color: #4feafe; /* Tercer color */
+    }
+    75% {
+      border-color: #35cbd3; /* Cuarto color */
+    }
+    100% {
+      border-color: #ff0ca2; /* Regresa al color inicial */
+    }
+  }
+  
