login, register y reset pw con scss listos

--- a/src/app/login/reset-password/reset-password.component.html
+++ b/src/app/login/reset-password/reset-password.component.html
@@ -1,32 +1,36 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>Recupera tu contraseña</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content class="ion-padding centered-page">
+  <!-- Campo para el nombre de usuario -->
 
+  <ion-card class="animated-border-card centered-content">
+    <img src="../assets/img/Logo/logonitsuga.png" alt="Logo" class="logo-img">
+    <ion-card-header>
+      <ion-card-title class="ion-text-center"> Recuperar Contraseña </ion-card-title>
+    </ion-card-header>
 
-<ion-content class="ion-padding">
-  <form (ngSubmit)="onResetPassword()" #resetPasswordForm="ngForm">
-    <ion-item>
-      <ion-label position="floating">Correo Electrónico</ion-label>
-      <ion-input 
-        type="email" 
-        [(ngModel)]="email" 
-        name="email" 
-        required 
-        email 
-        #emailInput="ngModel">
-      </ion-input>
-    </ion-item>
-    <ion-note color="danger" *ngIf="emailInput.invalid && emailInput.touched">
-      Correo electrónico inexistente.
-    </ion-note>
+    <ion-card-content>
+      <form (ngSubmit)="onResetPassword()" #resetPasswordForm="ngForm">
+        <ion-item>
+          <ion-label position="floating">Correo Electrónico</ion-label>
+          <ion-input 
+            type="email" 
+            [(ngModel)]="email" 
+            name="email" 
+            required 
+            email 
+            #emailInput="ngModel">
+          </ion-input>
+        </ion-item>
+        <ion-note color="danger" *ngIf="emailInput.invalid && emailInput.touched">
+          Correo electrónico inexistente.
+        </ion-note>
 
-    <ion-button expand="block" type="submit" [disabled]="resetPasswordForm.invalid">
-      Recuperar
-    </ion-button>
-  </form>
+        <ion-button expand="block" type="submit" [disabled]="resetPasswordForm.invalid">
+          Recuperar
+        </ion-button>
+      </form>
+      <ion-button class="volver" expand="block" color="light" [routerLink]="['/login']" color="danger">Volver </ion-button>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
+
+
