--- a/src/app/login/register/register.component.html
+++ b/src/app/login/register/register.component.html
@@ -1,33 +1,36 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Register</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content class="ion-padding">
+<ion-content class="ion-padding centered-page">
   <!-- Campo para el nombre de usuario -->
-  <ion-item>
-    <ion-label position="floating">Nombre de Usuario</ion-label>
-    <ion-input type="text" [(ngModel)]="username"></ion-input>
-  </ion-item>
 
+  <ion-card class="animated-border-card centered-content">
+    <img src="../assets/img/Logo/logonitsuga.png" alt="Logo" class="logo-img">
+    <ion-card-header>
+      <ion-card-title class="ion-text-center"> Regístrate </ion-card-title>
+    </ion-card-header>
 
+    <ion-card-content>
+      <form (submit)="register()">
+        <ion-item>
+          <ion-label position="floating">Nombre de Usuario</ion-label>
+          <ion-input type="text" [(ngModel)]="username"></ion-input>
+        </ion-item>
+  
+        
+        <ion-item>
+          <ion-label position="floating">Contraseña</ion-label>
+          <ion-input type="password" [(ngModel)]="password"></ion-input>
+        </ion-item>
 
-  <!-- Contraseña -->
-  <ion-item>
-    <ion-label position="floating">Contraseña</ion-label>
-    <ion-input type="password" [(ngModel)]="password"></ion-input>
-  </ion-item>
+        <ion-item>
+          <ion-label position="floating">Repite la contraseña</ion-label>
+          <ion-input type="password" [(ngModel)]="confirmPassword"></ion-input>
+        </ion-item>
+        <ion-text color="danger" *ngIf="errorMessage">{{ errorMessage }}</ion-text>
 
-  <!-- Confirmación de la contraseña -->
-  <ion-item>
-    <ion-label position="floating">Repite la contraseña</ion-label>
-    <ion-input type="password" [(ngModel)]="confirmPassword"></ion-input>
-  </ion-item>
-
-  <!-- Mostrar mensajes de error -->
-  <ion-text color="danger" *ngIf="errorMessage">{{ errorMessage }}</ion-text>
-
-  <!-- Botón para registrar -->
-  <ion-button expand="block" (click)="register()">Registrarme</ion-button>
+        <ion-button expand="block" (click)="register()">Registrarme</ion-button>
+  
+        
+      </form>
+      <ion-button class="volver" expand="block" color="light" [routerLink]="['/login']" color="danger">Volver </ion-button>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
