--- a/src/app/login/reset-password/reset-password.component.html
+++ b/src/app/login/reset-password/reset-password.component.html
@@ -24,7 +24,7 @@
           Correo electrónico inexistente.
         </ion-note>
 
-        <ion-button expand="block" type="submit" [disabled]="resetPasswordForm.invalid">
+        <ion-button expand="block" type="submit" [disabled]="resetPasswordForm.invalid" (click)="showLoading()">
           Recuperar
         </ion-button>
       </form>
