--- a/src/app/login/register/register.component.html
+++ b/src/app/login/register/register.component.html
@@ -26,11 +26,11 @@
         </ion-item>
         <ion-text color="danger" *ngIf="errorMessage">{{ errorMessage }}</ion-text>
 
-        <ion-button expand="block" (click)="register()">Registrarme</ion-button>
+        <ion-button expand="block" (click)="register()" (click)="showLoading()">Registrarme</ion-button>
   
         
       </form>
-      <ion-button class="volver" expand="block" color="light" [routerLink]="['/login']" color="danger">Volver </ion-button>
+      <ion-button class="volver" expand="block" color="light" [routerLink]="['/login']" color="danger" (click)="showLoading()">Volver </ion-button>
     </ion-card-content>
   </ion-card>
 </ion-content>
