--- a/src/app/productos/productos.page.html
+++ b/src/app/productos/productos.page.html
@@ -1,13 +1,18 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>productos</ion-title>
+    <ion-title>Productos</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">productos</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <ion-list>
+    <ion-item *ngFor="let producto of productos">
+      <img [src]="producto.imagen" alt="{{ producto.nombre }}" style="width: 50px; height: 50px;">
+      <h2>{{ producto.nombre }}</h2>
+      <p>{{ producto.descripcion }}</p>
+      <p>{{ producto.precio | currency }}</p>
+      <ion-button (click)="editarProducto(producto)">Editar</ion-button>
+      <ion-button (click)="eliminarProducto(producto.id)">Eliminar</ion-button>
+    </ion-item>
+  </ion-list>
 </ion-content>
