--- a/src/app/login/register/register.component.html
+++ b/src/app/login/register/register.component.html
@@ -2,7 +2,7 @@
   <!-- Campo para el nombre de usuario -->
 
   <ion-card class="animated-border-card centered-content">
-    <img src="../assets/img/Logo/logonitsuga.png" alt="Logo" class="logo-img">
+    <img src="../assets/gif/Gatocute.gif" alt="Logo" class="logo-img">
     <ion-card-header>
       <ion-card-title class="ion-text-center"> Regístrate </ion-card-title>
     </ion-card-header>
