vista cliente lista

--- a/src/app/login/register/register.component.scss
+++ b/src/app/login/register/register.component.scss
@@ -37,8 +37,8 @@ ion-item {
     margin-bottom: 15px;
 }
 
-ion-button {
-    margin-top: 20px;
+.reg {
+    margin-top: 10px;
 }
 
 .animated-border-card {
@@ -106,6 +106,13 @@ ion-button {
 }
 
 .volver {
-    margin-bottom: 15px;
+    margin-bottom: 5px;
     padding: 15px;
+}
+
+.gato{
+    display: block;
+    margin: 0 auto;
+    height: 30%;
+    width: 30%;
 }
