--- a/src/app/login/register/register.component.html
+++ b/src/app/login/register/register.component.html
@@ -2,7 +2,8 @@
   <!-- Campo para el nombre de usuario -->
 
   <ion-card class="animated-border-card centered-content">
-    <img src="../assets/gif/Gatocute.gif" alt="Logo" class="logo-img">
+    <img src="../assets/img/Logo/logonitsuga.png" alt="Logo" class="logo-img">
+    
     <ion-card-header>
       <ion-card-title class="ion-text-center"> Regístrate </ion-card-title>
     </ion-card-header>
@@ -26,7 +27,8 @@
         </ion-item>
         <ion-text color="danger" *ngIf="errorMessage">{{ errorMessage }}</ion-text>
 
-        <ion-button expand="block" (click)="register()" (click)="showLoading()">Registrarme</ion-button>
+        <ion-button class="reg" expand="block" (click)="register()" (click)="showLoading()">Registrarme</ion-button>
+        <img src="../assets/gif/Gatocute.gif" class="gato">
   
         
       </form>
