--- a/src/app/login/reset-password/reset-password.component.html
+++ b/src/app/login/reset-password/reset-password.component.html
@@ -28,7 +28,7 @@
           Recuperar
         </ion-button>
       </form>
-      <ion-button class="volver" expand="block" color="light" [routerLink]="['/login']" color="danger">Volver </ion-button>
+      <ion-button class="volver" expand="block" color="light" [routerLink]="['/login']" color="danger" (click)="showLoading()">Volver </ion-button>
     </ion-card-content>
   </ion-card>
 </ion-content>
