--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,9 +35,9 @@
             <ion-icon slot="start" name="call"></ion-icon>
             <ion-label>Contacto</ion-label>
           </ion-item>
-          <ion-item routerLink="/contacto" (click)="closeMenu()" (click)="showLoading()">
-            <ion-icon slot="start" name="call"></ion-icon>
-            <ion-label>Contacto</ion-label>
+          <ion-item (click)="logout()" (click)="closeMenu()" (click)="showLoading()">
+            <ion-icon slot="start" name="log-out-outline"></ion-icon>
+            <ion-label>Cerrar Sesión</ion-label>
           </ion-item>
           <!-- Agrega más ítems según tus necesidades -->
         </ion-list>
