--- a/src/app/categorias/categorias.page.html
+++ b/src/app/categorias/categorias.page.html
@@ -11,7 +11,15 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content>
+  <ion-list>
+    <ion-item *ngFor="let categoria of categorias">
+      {{ categoria.nombre }} 
+    </ion-item>
+  </ion-list>
+</ion-content>
+
+<!-- <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Categorias</ion-title>
@@ -87,4 +95,4 @@
   
 
 
-</ion-content>
+</ion-content> -->
