--- a/src/app/categorias/categorias.page.html
+++ b/src/app/categorias/categorias.page.html
@@ -3,7 +3,7 @@
     <div style="display: flex;">
       <img src="../assets/img/Logo/logonitsuga.png" alt="Logo" style="height: 50px; margin-right: 10px; margin-left: 5px;" [routerLink]="['/home']"
         (click)="showLoading()">
-      <ion-title>Categorías</ion-title>
+      <ion-title>Categorías </ion-title>
       <ion-buttons slot="end">
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
@@ -15,6 +15,8 @@
   <ion-list>
     <ion-item *ngFor="let categoria of categorias">
       {{ categoria.nombre }} 
+      {{ categoria.descripcion }}
+      <ion-img [src]="categoria.imagen" alt="Imagen de la categoría"></ion-img>
     </ion-item>
   </ion-list>
 </ion-content>
