correccion de errores al agregar categorias

--- a/src/app/admin/admin.page.html
+++ b/src/app/admin/admin.page.html
@@ -14,5 +14,5 @@
     </ion-item>
   </ion-list>  
 
-  <ion-button (click)="agregarCategoria()">Agregar Categoría</ion-button>
+  <ion-button (click)="addCategory()">Agregar Categoría</ion-button>
 </ion-content>
