--- a/src/app/modals/add-category-modal/add-category-modal.component.html
+++ b/src/app/modals/add-category-modal/add-category-modal.component.html
@@ -15,5 +15,9 @@
     <ion-label position="floating">Descripción</ion-label>
     <ion-input [(ngModel)]="descripcion"></ion-input>
   </ion-item>
+  <ion-item>
+    <ion-label position="floating">Imagen</ion-label>
+    <ion-input [(ngModel)]="imagen"></ion-input>
+  </ion-item>
   <ion-button expand="full" (click)="addCategory()">Añadir</ion-button>
 </ion-content>
