--- a/src/app/modals/add-product-modal/add-product-modal.component.html
+++ b/src/app/modals/add-product-modal/add-product-modal.component.html
@@ -1,3 +1,27 @@
-<p>
-  add-product-modal works!
-</p>
+<ion-header>
+  <ion-toolbar>
+    <ion-title>Agregar Producto</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="dismiss()">Cerrar</ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
+<ion-content>
+  <ion-item>
+    <ion-label position="floating">Nombre Producto</ion-label>
+    <ion-input [(ngModel)]="nombre"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">Descripción</ion-label>
+    <ion-input [(ngModel)]="descripcion"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">Precio</ion-label>
+    <ion-input [(ngModel)]="precio" type="number"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">URL Imagen</ion-label>
+    <ion-input [(ngModel)]="imagen"></ion-input>
+  </ion-item>
+  <ion-button expand="full" (click)="addProduct()">Añadir</ion-button>
+</ion-content>
