Cambio de vista Admin

--- a/src/app/modals/editar-category-modal/editar-category-modal.component.html
+++ b/src/app/modals/editar-category-modal/editar-category-modal.component.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-title>Editar Categoría</ion-title>
     <ion-buttons slot="end">
-      <ion-button (click)="cerrarModal()">Cerrar</ion-button>
+      <ion-button (click)="cerrarModal()" color="secondary">Cerrar</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
