--- a/src/app/admin/admin.page.html
+++ b/src/app/admin/admin.page.html
@@ -1,18 +1,38 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>Administración</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="addCategory()" (click)="showLoading()">
+        <ion-icon color="secondary" name="add-circle-outline"></ion-icon>
+      </ion-button>
+      <ion-button (click)="recargarCategorias()" (click)="showLoading()">
+        <ion-icon color="secondary" slot="icon-only" name="refresh-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+  <ion-toolbar>
+    <ion-title size="small">Bienvenido, {{ nombreUsuario }}</ion-title> <!-- Muestra el nombre de usuario -->
+    <ion-buttons slot="end">
+      <ion-button (click)="logout()" (click)="showLoading()">
+        <ion-icon slot="start" name="log-out-outline" color="danger"></ion-icon>
+      </ion-button>
+    </ion-buttons >
   </ion-toolbar>
 </ion-header>
+
 
 <ion-content>
   <ion-list>
     <ion-item *ngFor="let categoria of categorias">
       {{ categoria.nombre }}
-      <ion-button (click)="editarCategoria(categoria)">Editar</ion-button>
-      <ion-button (click)="eliminarCategoria(categoria.id)">Eliminar</ion-button>
-      <ion-button [routerLink]="['/productos', categoria.id]">Ver Productos</ion-button>
+      <ion-buttons slot="end">
+        <ion-button color="warning" (click)="editarCategoria(categoria)"><ion-icon slot="start"
+            name="create-outline"></ion-icon></ion-button>
+        <ion-button color="danger" (click)="eliminarCategoria(categoria.id)"><ion-icon slot="start"
+            name="close-circle-outline"></ion-icon></ion-button>
+        <ion-button color="dark" [routerLink]="['/productos', categoria.id]"><ion-icon slot="start"
+            name="search-circle-outline"></ion-icon></ion-button>
+      </ion-buttons>
     </ion-item>
-  </ion-list>  
-
-  <ion-button (click)="addCategory()">Agregar Categoría</ion-button>
+  </ion-list>
 </ion-content>
