--- a/src/app/modals/add-category-modal/add-category-modal.component.html
+++ b/src/app/modals/add-category-modal/add-category-modal.component.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-title>Agregar Categoría</ion-title>
     <ion-buttons slot="end">
-      <ion-button (click)="dismiss()">Cerrar</ion-button>
+      <ion-button (click)="dismiss()" color="secondary">Cerrar</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
