--- a/src/app/admin-cat/admin-cat.page.html
+++ b/src/app/admin-cat/admin-cat.page.html
@@ -16,7 +16,7 @@
     </ion-buttons>
   </ion-toolbar>
   <ion-toolbar>
-    <ion-title size="small">Bienvenido, {{ nombreUsuario }}</ion-title> <!-- Muestra el nombre de usuario -->
+    <ion-title size="small">Bienvenido, {{ nombreUsuario }}</ion-title> 
     <ion-buttons slot="end">
       <ion-button (click)="logout()" (click)="showLoading()">
         <ion-icon slot="start" name="log-out-outline" color="danger"></ion-icon>
