correción en base de datos y modal edit-product

--- a/src/app/modals/editar-category-modal/editar-category-modal.component.html
+++ b/src/app/modals/editar-category-modal/editar-category-modal.component.html
@@ -16,5 +16,9 @@
     <ion-label position="stacked">Descripción</ion-label>
     <ion-input [(ngModel)]="nuevaDescripcion"></ion-input>
   </ion-item>
+  <ion-item>
+    <ion-label position="stacked">Imagen</ion-label>
+    <ion-input [(ngModel)]="nuevaImagen"></ion-input>
+  </ion-item>
   <ion-button expand="full" (click)="guardarCambios()">Guardar Cambios</ion-button>
 </ion-content>
