--- a/src/app/modals/edit-product-modal/edit-product-modal.component.html
+++ b/src/app/modals/edit-product-modal/edit-product-modal.component.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-title>Editar Producto</ion-title>
     <ion-buttons slot="end">
-      <ion-button (click)="cerrarModal()">Cerrar</ion-button>
+      <ion-button (click)="dismiss()">Cerrar</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -19,6 +19,12 @@
   <ion-item>
     <ion-label position="stacked">Precio</ion-label>
     <ion-input [(ngModel)]="nuevoPrecio" type="number"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="stacked">Categoría</ion-label>
+    <ion-select [(ngModel)]="categoriaId">
+      <ion-select-option *ngFor="let categoria of categorias" [value]="categoria.id">{{ categoria.nombre }}</ion-select-option>
+    </ion-select>
   </ion-item>
   <ion-item>
     <ion-label position="stacked">Imagen URL</ion-label>
