--- a/src/app/admin-users/admin-users.page.html
+++ b/src/app/admin-users/admin-users.page.html
@@ -8,22 +8,23 @@
     <ion-title>Gestión de Usuarios</ion-title>
   </ion-toolbar>
   <ion-toolbar>
-    <ion-title size="small">Bienvenido, {{ nombreUsuario }}</ion-title> <!-- Muestra el nombre de usuario -->
+    <ion-title size="small">Bienvenido, {{ nombreUsuario }}</ion-title> 
     <ion-buttons slot="end">
+      <ion-button (click)="openAddUserModal()" (click)="showLoading()">
+        <ion-icon color="secondary" name="add-circle-outline"></ion-icon>
+      </ion-button>
       <ion-button (click)="logout()" (click)="showLoading()">
         <ion-icon slot="start" name="log-out-outline" color="danger"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-
-
-<!-- AQUI QUIERO CONSUMIR UNA API EXTERNA, PARA MOSTRAR UNA LISTA DE USUARIOS -->
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">admin-users</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-list>
+    <ion-item *ngFor="let user of users">
+      <h2>{{ user.name }}</h2>
+      <p>{{ user.isAdmin ? 'Administrador' : 'Usuario' }}</p>
+    </ion-item>
+  </ion-list>
+  <ion-button (click)="openAddUserModal()">Agregar Usuario</ion-button>
 </ion-content>
