--- a/src/app/admin-users/admin-users.page.html
+++ b/src/app/admin-users/admin-users.page.html
@@ -21,9 +21,11 @@
 </ion-header>
 <ion-content [fullscreen]="true">
   <ion-list>
-    <ion-item *ngFor="let user of users">
-      <h2>{{ user.name }}</h2>
-      <p>{{ user.isAdmin ? 'Administrador' : 'Usuario' }}</p>
+    <ion-item *ngFor="let user of users" >
+      <h2>{{ user.username }}</h2><br>
+      <p>{{ user.isAdminText }}</p>
+      <ion-button color="warning" (click)="openEditUserModal(user)"><ion-icon slot="start" name="create-outline"></ion-icon></ion-button>
+      <ion-button color="danger" (click)="deleteUser(user.id)"><ion-icon slot="start" name="close-circle-outline"></ion-icon></ion-button>
     </ion-item>
   </ion-list>
   <ion-button (click)="openAddUserModal()">Agregar Usuario</ion-button>
