--- a/src/app/modals/add-user-modal/add-user-modal.component.html
+++ b/src/app/modals/add-user-modal/add-user-modal.component.html
@@ -10,7 +10,7 @@
 <ion-content>
   <ion-item>
     <ion-label>Nombre de usuario</ion-label>
-    <ion-input type="text" [(ngModel)]="user.name"></ion-input>
+    <ion-input type="text" [(ngModel)]="username"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label>Contraseña</ion-label>
