implementacion de carrito de compras

--- a/src/app/categorias/categorias.page.html
+++ b/src/app/categorias/categorias.page.html
@@ -5,6 +5,9 @@
         (click)="showLoading()">
       <ion-title>Categorías</ion-title>
       <ion-buttons slot="end">
+        <ion-button [routerLink]="['/carrito']">
+          <ion-icon name="cart-outline" color="light"></ion-icon>
+        </ion-button>
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
     </div>
