implementación de modal con detalles del pedido generado

--- a/src/app/admin/admin.page.html
+++ b/src/app/admin/admin.page.html
@@ -33,4 +33,9 @@
       <ion-button [routerLink]="['admin-users']" expand="block">Gestión de Usuarios</ion-button>
     </ion-col>
   </ion-row>
+  <ion-row class="ion-align-items-center ion-justify-content-center">
+    <ion-col size="12" class="button-col">
+      <ion-button [routerLink]="['admin-pedidos']" expand="block">Gestión de Pedidos</ion-button>
+    </ion-col>
+  </ion-row>
 </ion-content>
