--- a/src/app/carrito/carrito.page.html
+++ b/src/app/carrito/carrito.page.html
@@ -26,6 +26,7 @@
   </ion-footer>
 
   <ion-button expand="full" color="danger" (click)="clearCart()">Vaciar Carrito</ion-button>
+  <ion-button expand="full" color="success" (click)="comprar()">Realizar Pedido</ion-button>
 </ion-content>
 
 <ng-template #emptyCart>
