--- a/src/app/modals/edit-user-modal/edit-user-modal.component.html
+++ b/src/app/modals/edit-user-modal/edit-user-modal.component.html
@@ -10,18 +10,16 @@
 <ion-content>
   <ion-item>
     <ion-label position="stacked">Nombre de usuario</ion-label>
-    <ion-input [(ngModel)]="username"></ion-input>
+    <ion-input [(ngModel)]="username" readonly></ion-input>
+    <ion-icon slot="end" name="key-outline" color="medium"></ion-icon>
   </ion-item>
   <ion-item>
-    <ion-label position="stacked">Contraseña</ion-label>
-    <ion-input [(ngModel)]="password"></ion-input>
+    <ion-label>Rol de Admin</ion-label>
+    <ion-toggle [(ngModel)]="isAdmin" [checked]="isAdmin === 1"></ion-toggle>
   </ion-item>
   <ion-item>
-    <ion-label position="stacked">Tipo de usuario</ion-label>
-    <ion-select [(ngModel)]="isAdmin">
-      <ion-select-option value="0">Usuario</ion-select-option>
-      <ion-select-option value="1">Administrador</ion-select-option>
-    </ion-select>
+    <ion-label>Usuario Bloqueado</ion-label>
+    <ion-toggle [(ngModel)]="isBlocked" [checked]="isBlocked === 1"></ion-toggle> <!-- Toggle para bloquear usuario -->
   </ion-item>
   <ion-button expand="full" (click)="editUser()">Guardar</ion-button>
 </ion-content>
