--- a/src/app/categorias/categorias.page.scss
+++ b/src/app/categorias/categorias.page.scss
@@ -1,38 +1,63 @@
 .grid-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 15px;
-    padding: 15px;
-  }
-  
-  .grid-item {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    text-align: center;
-    cursor: pointer;
-  }
-  
-  ion-card {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 10px;
-  }
-  
-  ion-card-header {
-    margin-top: 10px;
-  }
-  
-  .categoria-img {
-    width: 100%;
-    height: 150px;
-    object-fit: cover;
-    border-radius: 10px;
-  }
-  
-  ion-button {
-    margin-top: 10px;
-  }
-  
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 15px;
+  background-color: #fbeff7; // Fondo rosado pastel
+}
+
+.grid-item {
+  max-width: 90%;
+  border-radius: 20px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+  margin: 15px;
+  background-color: #fff;
+  transition: transform 0.2s ease-in-out;
+  border: 2px solid #ffffff; // Borde blanco
+}
+
+.grid-item:hover {
+  transform: scale(1.03);
+}
+
+.categoria-img {
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+}
+
+ion-card {
+  --background: #ffffff;
+  border-radius: 20px;
+}
+
+ion-card-header {
+  background-color: #ffebf7; // Fondo rosado claro para el encabezado de la tarjeta
+  border-bottom: 1px solid #ffd1e5;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  text-align: center;
+}
+
+ion-card-content {
+  text-align: center;
+  color: #555;
+}
+
+ion-button {
+  --background: #8e44ad; // Fondo morado para el botón
+  --color: #ffffff;
+  border-radius: 12px;
+  font-size: 1em;
+  width: 80%; // Reducir el ancho del botón
+  margin: 0 auto; // Centrar el botón horizontalmente
+  display: block; // Asegurarse de que el botón esté centrado
+  margin-top: 10px;
+  transition: background-color 0.3s ease;
+}
+
+ion-button:hover {
+  --background: #b085e8; // Cambiar el color al pasar el cursor
+}
