--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -29,6 +29,28 @@
   <ion-title style="font-size:30px; align-items: center; color: red; margin-top: 8px;">HOT SALES</ion-title>
   <ion-grid>
     <ion-row>
+      <ion-col size="6" size-md="4" size-lg="2" *ngFor="let producto of productos">
+        <ion-card>
+          <img [src]="producto.imagen" alt="{{ producto.nombre }}" class="card-image" />
+          <ion-card-header>
+            <ion-card-title>{{ producto.nombre }}</ion-card-title>
+            <ion-card-subtitle>${{ producto.precio }}</ion-card-subtitle>
+          </ion-card-header>
+          <ion-item>
+            <ion-icon slot="start" name="cart-outline"></ion-icon>
+            <ion-button fill="clear" (click)="agregarAlCarrito(producto)">Agregar al carrito</ion-button>
+          </ion-item>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+</ion-content>
+
+
+<!-- <ion-content [fullscreen]="true">
+  <ion-title style="font-size:30px; align-items: center; color: red; margin-top: 8px;">HOT SALES</ion-title>
+  <ion-grid>
+    <ion-row>
       <ion-col size="6" size-md="4" size-lg="2">
         <ion-card>
           <img alt="Silhouette of mountains" src="../assets/img/peluches/peluche_panda.png" />
@@ -122,4 +144,4 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-</ion-content>
+</ion-content> -->
