correccion en editar usuario con persistencia

--- a/src/app/modals/block-user-modal/block-user-modal.component.html
+++ b/src/app/modals/block-user-modal/block-user-modal.component.html
@@ -15,7 +15,7 @@
 
   <div class="ion-padding-top">
     <ion-button expand="full" color="danger" (click)="toggleBlock()">
-      {{ isBlocked ? 'Desbloquear Usuario' : 'Bloquear Usuario' }}
+      {{ isBlocked ? 'Bloquear' : 'Desbloquear' }}
     </ion-button>
   </div>
 </ion-content>
