--- a/src/app/modals/admin-user-modal/admin-user-modal.component.html
+++ b/src/app/modals/admin-user-modal/admin-user-modal.component.html
@@ -15,7 +15,7 @@
 
   <div class="ion-padding-top">
     <ion-button expand="full" color="primary" (click)="toggleAdmin()">
-      {{ isAdmin ? 'Quitar Admin' : 'Hacer Admin' }}
+      {{ isAdmin ? 'Hacer Admin' : 'Quitar Admin' }}
     </ion-button>
   </div>
 </ion-content>
