correcion registro usuario

--- a/src/app/login/register/register.component.html
+++ b/src/app/login/register/register.component.html
@@ -14,6 +14,11 @@
           <ion-label position="floating">Nombre de Usuario</ion-label>
           <ion-input type="text" [(ngModel)]="username"></ion-input>
         </ion-item>
+
+        <ion-item>
+          <ion-label position="floating">Correo Electrónico</ion-label>
+          <ion-input type="email" [(ngModel)]="mail"></ion-input>
+        </ion-item>
   
         
         <ion-item>
