--- a/src/app/modals/add-user-modal/add-user-modal.component.html
+++ b/src/app/modals/add-user-modal/add-user-modal.component.html
@@ -12,6 +12,12 @@
     <ion-label>Nombre de usuario</ion-label>
     <ion-input type="text" [(ngModel)]="username"></ion-input>
   </ion-item>
+
+  <ion-item>
+    <ion-label>Correo Electrónico</ion-label>
+    <ion-input type="email" [(ngModel)]="mail"></ion-input>
+  </ion-item>
+
   <ion-item>
     <ion-label>Contraseña</ion-label>
     <ion-input type="password" [(ngModel)]="password"></ion-input>
