recuperar contraseña implmeentado

--- a/src/app/login/reset-password/reset-password.component.html
+++ b/src/app/login/reset-password/reset-password.component.html
@@ -13,8 +13,8 @@
           <ion-label position="floating">Correo Electrónico</ion-label>
           <ion-input 
             type="email" 
-            [(ngModel)]="email" 
-            name="email" 
+            [(ngModel)]="mail" 
+            name="mail" 
             required 
             email 
             #emailInput="ngModel">
@@ -24,11 +24,11 @@
           Correo electrónico inexistente.
         </ion-note>
 
-        <ion-button expand="block" type="submit" [disabled]="resetPasswordForm.invalid" (click)="showLoading()">
+        <ion-button expand="block" type="submit" [disabled]="resetPasswordForm.invalid || isLoading">
           Recuperar
         </ion-button>
       </form>
-      <ion-button class="volver" expand="block" color="light" [routerLink]="['/login']" color="danger" (click)="showLoading()">Volver </ion-button>
+      <ion-button class="volver" expand="block" color="light" [routerLink]="['/login']" color="danger">Volver </ion-button>
     </ion-card-content>
   </ion-card>
 </ion-content>
